# local-invoice-ocr

./: .gitignore  README.md  deepseek-claude-code-pidmina.html  pyproject.toml  zvit-ollama-openwebui.html
docs/superpowers/plans/: 2026-06-06-invoice-pipeline-phase1.md  2026-06-08-invoice-review-ui-phase2.md  2026-06-08-phase3.md
docs/superpowers/specs/: 2026-06-06-local-invoice-processing-design.md
invoiceflow/: cli.py  config.py  convert.py  crypto.py  db.py  email_source.py  exporter.py  extractor.py  ingest.py  models.py  queue.py  reader.py  schema.py  store.py  validator.py  webapp.py  worker.py
invoiceflow/static/: style.css
invoiceflow/templates/: base.html  detail.html  list.html
service/: README.md  com.ljutaev.invoiceflow.work.plist
tests/: conftest.py  test_convert.py  test_crypto.py  test_email_source.py  test_exporter.py  test_extractor.py  test_ingest.py  test_ingest_upload.py  test_manual_input.py  test_queue.py  test_reader.py  test_store.py  test_store_phase2.py  test_validator.py  test_webapp.py  test_webapp_lineitems.py  test_worker.py  test_worker_retry.py
tests/fixtures/: README.md
