[project]
name = "invoiceflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "keyring>=25.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
invoiceflow = "invoiceflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
